[package]
name = "export-signal-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
time = "0.3.28"
rusqlite = { version = "0.29.0", features = ["bundled", "bundled-sqlcipher"] }
json = "0.12.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rayon = "1.8.0"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
chrono = "0.4.31"
pbkdf2 = "0.12.2"
log = "0.4.20"
dirs = "5.0.1"
html-escape = "0.2.13"
clap = { version = "4.4.11", features = ["derive"] }

[dev-dependencies]
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
